force-app/main/default/objects/Product_Plan__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If we are engaged, please enter the opportunity name.</inlineHelpText>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product Plans</relationshipLabel>
    <relationshipName>Product_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>