force-app/main/default/objects/Product_Plan__c/fields/Other_Issues__c.field-meta.xml
<CustomField>
    <fullName>Other_Issues__c</fullName>
    <label>Other Issues</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>