force-app/main/default/objects/Product_Plan__c/fields/Progress_this_Half__c.field-meta.xml
<CustomField>
    <fullName>Progress_this_Half__c</fullName>
    <inlineHelpText>If we are engaged, what progress do we plan to make this half?</inlineHelpText>
    <label>Progress this Half</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>