force-app/main/default/objects/Product_Plan__c/fields/Retention_Risks__c.field-meta.xml
<CustomField>
    <fullName>Retention_Risks__c</fullName>
    <inlineHelpText>Are there any risks to retention?</inlineHelpText>
    <label>Retention Risks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>