force-app/main/default/objects/Product_Plan__c/fields/Strategy_Summary__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Summary__c</fullName>
    <inlineHelpText>If we are engaged, please review your solution selling materials and provide a short summary on your strategy and identify any gaps in your SS material.</inlineHelpText>
    <label>Strategy Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>